--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -1,19 +1,52 @@
 .section-feature {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: auto;
+  
+     @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+                }
+    @media screen and (min-width: 1200px) {
+    max-width: 1200px;
     padding-top: 94px;
     padding-bottom: 94px;
+                }
 }
 
 .section-feature__list {
-    display: flex;
-}
+    display: block;
+    @media screen and(min-width:768px){
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-between;
+    }
+    @media screen and(min-width:1200px) {
+        display: flex;
+        flex-wrap:nowrap
+    }
+    }
+ 
 
 .section-feature__item {
-    margin-right: 30px;
-    width: 270px;
+    max-width: 450px;
+    margin-bottom: 30px;
+
+    @media screen and(min-width:768px) {
+    max-width: 354px;
+        }
+    @media screen and(min-width:1200px) {
+     margin-right: 30px;
+     max-width: 270px;
+    }
 }
 
 .section-feature__item:last-child {
-    margin-right: 0;
+    margin-bottom: 0;
+    @media screen and(min-width:1200px) {
+        margin-right: 0;
+    }
 }
 
 .section-feature__item::before {
@@ -41,6 +74,14 @@
 
 .icon-astronaut::before {
     background-image: url(../img/bg-astronaut.svg);
+}
+.feature-item__title{
+font-size: 14px;
+text-transform: uppercase;
+@media screen and(max-width:767px) {
+display: flex;
+ justify-content: center;
+}
 }
 
 .section-feature__title {
