--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,28 +4,46 @@ h3,
 p {
     margin-bottom: 0;
     margin-top: 0;
+
 }
 body {
     color: var(--primery-text-color);
     background-color: var(--white-text-color);
     font-family: Roboto, sans-serif;
 }
-.container {
-    margin: auto;
-    width: 1200px;
-    padding-left: 15px;
+.list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.container {
+    outline: 2px solid red;
+    max-width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    
+ //tablet screen 768px
+    @media screen and (min-width: 768px) {
+        max-width: 768px;
+    }
+//desctop screen 1200px
+    @media screen and (min-width:1200px){
+     max-width: 1200px;
+    }
+}
+
 
 .container.footer {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
 }
-.list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-img {
-    display: block;
-}
+
