--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,12 +1,17 @@
 .button-list {
     display: flex;
-    justify-content: center;
+    justify-content:flex-start;
     align-items: center;
-    margin-bottom: 34px;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-bottom: 40px;
+    @media screen and(min-width:768px) {
+    justify-content:center;
+    margin-bottom: 30px;
+    }
 }
-
-.button-list__item {
-    margin-left: 8px;
+.button-list__item:not(:last-child) {
+margin-right: 8px;
 }
 
 .button {
