--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,22 +1,45 @@
 .team {
     background-color: var(--button-background-color);
+    padding-bottom: 60px;
+    padding-top: 60px;
+    max-width: 480px;
+    margin: auto;
+    
+ @media screen and(min-width:768px) {
+    max-width: 768px;
+ }
+@media screen and(min-width:1200px) {
     padding-bottom: 94px;
     padding-top: 94px;
     max-width: 1600px;
     margin: auto;
 }
+ 
+}
 
 .team__title {
-    padding-bottom: 50px;
-    color: var(--primery-text-color);
-    font-weight: 700;
+font-weight: 700;
+font-size: 28px;
+line-height: 33px;
+text-align: center;
+letter-spacing: 1.17;
+padding-bottom: 30px;
+color: var(--primery-text-color);
+
+@media screen and(min-width:1200px) {
     font-size: 36px;
-    text-align: center;
-    letter-spacing: 0.03em;
+    padding-bottom: 50px;
+}
+  
 }
 
 .team__list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    @media screen and(min-width:768px) {
+        justify-content: space-around;
+    }
 }
 
 .team__item {
@@ -24,14 +47,20 @@
 }
 
 .team__item:not(:last-child) {
-    margin-right: 30px;
+    margin-bottom: 30px;
+    @media screen and(min-width:768px) {
+
+}
 }
 
 .employee {
     background-color: var(--white-text-color);
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
     border-radius: 0px 0px 4px 4px;
+ @media screen and(min-width:1200px) {
+        padding-bottom: 30px;
+    }
 }
 
 .employee__title {
