--- a/sass/layout/portfolio.scss
+++ b/sass/layout/portfolio.scss
@@ -1,7 +1,11 @@
 /*portfolio*/
 .portfolio {
+    padding-top: 60px;
+    padding-bottom: 60px;
+@media screen and(min-width:1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
+    }
 }
 
 .portfolio-list {
@@ -11,7 +15,13 @@
 }
 
 .portfolio-list__item {
-    flex-basis: calc((100% - 30px * 2) / 3);
+        flex-basis: calc((100% - 15px * 2) / 1);
+    @media screen and(min-width:768px) {
+        flex-basis: calc((100% - 15px * 2) / 2);
+    }
+    @media screen and(min-width:1200) {
+        flex-basis: calc((100% - 30px * 2) / 3);
+}
 }
 
 .portfolio-list__link {
