--- a/sass/layout/portfolio.scss
+++ b/sass/layout/portfolio.scss
@@ -9,20 +9,24 @@
 }
 
 .portfolio-list {
- 
-    // @media screen and (min-width768px){
-    //     display: flex;
-    //         flex-wrap: wrap;
-    //         gap: 30px;
-    // }
-  
+    display: block;
+ @media screen and (min-width:768px) {
+        display: flex;
+         flex-wrap: wrap;
+        gap: 30px;
+    }
 }
-  
-//  .portfolio-list__item{
-//  flex-basis: calc((100% - 30px * 2) / 3);
-//   }
-     
 
+//  .portfolio-list__item{
+// @media screen and (min-width:768px){
+//     flex-basis: 50%;
+
+// @media screen and (min-width:1200px) {
+//     flex-basis: 33.3%;
+// }
+//  }
+    
+    
 .portfolio-list__link {
     display: block;
     color: var(--primery-text-color);
@@ -66,6 +70,7 @@
 }
 
 .project {
+    max-width: 450px;
     padding: 20px 24px;
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
