--- a/css/main.css
+++ b/css/main.css
@@ -741,19 +741,6 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .portfolio-list__item {
-    -ms-flex-preferred-size: 33.3%;
-        flex-basis: 33.3%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .portfolio-list__item {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-  }
-}
-
 .portfolio-list__link {
   display: block;
   color: var(--primery-text-color);
@@ -808,6 +795,7 @@ img {
 }
 
 .project {
+  max-width: 450px;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
