--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -13,15 +13,9 @@
 .portfolio-list {
   display: block;
 }
-@media screen and (min-width: 768px) {
-  .portfolio-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
-  }
+
+.portfolio-list__item {
+  outline: 10px solid blue;
 }
 
 .portfolio-list__link {
@@ -78,7 +72,6 @@
 }
 
 .project {
-  max-width: 450px;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
