--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,6 @@
 @import "./layout/team";
 @import "./layout/social-links";
 @import "./layout/customers";
-@import "./layout/portfolio.scss";
+@import "./layout/portfolio";
 @import "./layout/footer";
 @import "./layout/modal";
