--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,15 +10,13 @@
 
 .portfolio-list {
     display: block;
-// //  @media screen and (min-width:768px) {
-// //         display: flex;
-// //          flex-wrap: wrap;
-// //         gap: 30px;
-// //     }
-// }
+ @media screen and (min-width:768px) {
+ display: flex;
+flex-wrap: wrap;
+       gap: 30px;
+  }
+}
 .portfolio-list__item{
-outline: 10px solid blue;
-
      @media screen and (min-width:768px) {
     flex-basis: calc((100% - 30px)/2);}
     @media screen and (min-width:1200px) {
@@ -87,5 +85,4 @@ outline: 10px solid blue;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
-    letter-spacing: 0.03em;
-}
+    letter-spacing: 0.03em;}
